# mh_infodump

./: .gitignore  README.md  dump.py  pyproject.toml  requirements.txt
.github/workflows/: update.yml
src/: constants.py  loksabha.py
