[tool.poetry]
name = "infodump"
version = "0.1.0"
description = ""
authors = ["Karthik Viswanath <viswanathkarthikeya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
jupyterlab = "^3.6.1"
jupyterlab-vim = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
