[tool.poetry]
name = "infodump"
version = "0.1.0"
description = ""
authors = ["Karthik Viswanath <viswanathkarthikeya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
